--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "react-dom": "^17.0.2",
     "react-github-btn": "^1.2.0",
     "react-modal": "^3.13.1",
+    "react-player": "^2.9.0",
     "react-rnd": "^10.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-sticky-header": "^0.2.0",
+    "react-youtube": "^7.13.1",
     "redux": "^4.1.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.3",
