--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.5",
+    "emailjs-com": "^3.2.0",
     "feather-icons": "^4.28.0",
     "framer-motion": "^4.1.5",
     "gh-pages": "^3.2.3",
@@ -24,6 +25,7 @@
     "react-slick": "^0.28.1",
     "react-sticky-header": "^0.2.0",
     "react-youtube": "^7.13.1",
+    "reactstrap": "^9.0.1",
     "redux": "^4.1.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.3",
