--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-animated-text-builders": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-github-btn": "^1.2.0",
     "react-modal": "^3.13.1",
+    "react-native": "^0.66.4",
+    "react-native-web": "^0.17.5",
     "react-player": "^2.9.0",
     "react-rnd": "^10.2.4",
     "react-router-dom": "^5.2.0",
